--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
         feature one section
         section on feature2
     </section>
+
+
+    <p>
+        git stash testing
+    </p>
+
 </body>
 </html>
